--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; width: 100%; color: white; position: absolute; bottom: 5rem;}
+    .attribution a { color: hsl(25, 97%, 53%); }
 
     @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
     .card{
@@ -247,12 +247,12 @@
         don’t hesitate to get in touch!</p>
     </div>
   </div>
-  <!--
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://portfolio-vic-projects.vercel.app" target="_blank">Víctor Fuentes</a>.
   </div>
--->
+
 </body>
 </html>
 
