feat(link): adding link to my page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
     .card{
-      background-color: hsl(213, 19%, 18%);
+      background-color: #202630;
       width: 315px;
       height: 315px;
       border-radius: 2rem;
@@ -31,7 +31,7 @@
       transform: translateY(-50%);
     }
     .card-2{
-      background-color: hsl(213, 19%, 18%);
+      background-color: #202630;
       width: 315px;
       height: 315px;
       border-radius: 2rem;
