--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html role="log" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -195,7 +195,7 @@
 
   <!-- Rating state start -->
 
-  <div role="card1" class="card" id="dialog1">
+  <div role="alertdialog" class="card" id="dialog1">
     <div class="card__star">
       <div class="star__container">
         <img class="star" src="./images/icon-star.svg" alt="star">
@@ -231,7 +231,7 @@
   </div>
 
 
-  <div role="card2" class="card-2" id="dialog2">
+  <div role="alertdialog" class="card-2" id="dialog2">
     <div class="card__star">
       <div class="img_ilustration_container">
         <img class="img_ilustration" src="./images/illustration-thank-you.svg" alt="thank you">
@@ -249,7 +249,7 @@
     </div>
   </div>
   
-  <div role="attribution" class="attribution">
+  <div role="doc-backlink" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://portfolio-vic-projects.vercel.app" target="_blank">Víctor Fuentes</a>.
   </div>
