feat(link): adding link to my page

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
   <!-- Rating state start -->
 
-  <div role="alertdialog" name="dialog1" class="card" id="dialog1">
+  <div role="dialog" class="card" id="dialog1">
     <div class="card__star">
       <div class="star__container">
         <img class="star" src="./images/icon-star.svg" alt="star">
@@ -231,7 +231,7 @@
   </div>
 
 
-  <div role="alertdialog" name="dialog2" class="card-2" id="dialog2">
+  <div role="alertdialog" class="card-2" id="dialog2">
     <div class="card__star">
       <div class="img_ilustration_container">
         <img class="img_ilustration" src="./images/illustration-thank-you.svg" alt="thank you">
