--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +11,6 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
-
 
     .attribution { font-size: 11px; text-align: center; width: 100%; color: white; position: absolute; bottom: 5rem;}
     .attribution a { color: hsl(25, 97%, 53%); }
@@ -231,7 +229,7 @@
   </div>
 
 
-  <div role="alertdialog" class="card-2" id="dialog2">
+  <div role="alertdialog" aria-labelledby="alert-dialog" class="card-2" id="dialog2">
     <div class="card__star">
       <div class="img_ilustration_container">
         <img class="img_ilustration" src="./images/illustration-thank-you.svg" alt="thank you">
@@ -249,7 +247,7 @@
     </div>
   </div>
   
-  <div role="contentinfo" class="attribution">
+  <div role="contentinfo" aria-labelledby="alert-dialog" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://portfolio-vic-projects.vercel.app" target="_blank">Víctor Fuentes</a>.
   </div>
