--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   </div>
 
 
-  <div role="alertdialog" aria-labelledby="alert-dialog" class="card-2" id="dialog2">
+  <div role="alertdialog" class="card-2" id="dialog2">
     <div class="card__star">
       <div class="img_ilustration_container">
         <img class="img_ilustration" src="./images/illustration-thank-you.svg" alt="thank you">
@@ -247,7 +247,7 @@
     </div>
   </div>
   
-  <div role="contentinfo" aria-labelledby="alert-dialog" class="attribution">
+  <div role="contentinfo" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://portfolio-vic-projects.vercel.app" target="_blank">Víctor Fuentes</a>.
   </div>
