feat(link): adding link to my page

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   </div>
 
 
-  <div role="alertdialog" class="card-2" id="dialog2">
+  <div role="alertdialog" aria-labelledby="alert-dialog" class="card-2" id="dialog2">
     <div class="card__star">
       <div class="img_ilustration_container">
         <img class="img_ilustration" src="./images/illustration-thank-you.svg" alt="thank you">
