feat(link): adding link to my page

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
   <!-- Rating state start -->
 
-  <div role="dialog" class="card" id="dialog1">
+  <div role="dialog" aria-label="Dialog 1" class="card" id="dialog1">
     <div class="card__star">
       <div class="star__container">
         <img class="star" src="./images/icon-star.svg" alt="star">
